# keyboard-from-scratch

./: LICENSE  README.md
firmware/: .gitignore  Cargo.toml  memory.x  opt  runner.gdb
firmware/.cargo/: config
firmware/key_stream/: Cargo.toml
firmware/key_stream/src/: hid_keycodes.rs  keymap.rs  lib.rs  ring_buffer.rs
firmware/src/: app.rs  descr.rs  direct_drive.rs  gpio.rs  hid.rs  hid_keycodes.rs  i2c_slave.rs  key_stream.rs  lib.rs  main.rs  matrix.rs  peer.rs  pma.rs  reset.rs  stm32f072.rs  stm32f103.rs  usb.rs
