[package]
name = "firmware"
version = "0.1.0"
authors = ["tomykaira <tomykaira@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = { version = "0.6.11", features = ["device"] }
cortex-m-rtic = "0.5.5"
cortex-m-semihosting = "0.3.2"
embedded-hal = "0.2.3"
panic-halt = "0.2"
panic-semihosting = "0.5"
stm32f1 = { version = "0.12.1", features = ["rt", "stm32f103"] }
stm32f1xx-hal = { version = "0.6.1", features = ["stm32f103", "stm32-usbd", "rt"] }
usb-device = "0.2.4"
usbd-serial = "0.1"
usbd-webusb = "1.0.0"
vcell = "0.1.0"
volatile-register = "0.2"
nb = "1.0.0"
key_stream = { path = "key_stream" }

[[bin]]
name = "firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
