[package]
name = "firmware"
version = "0.1.0"
authors = ["tomykaira <tomykaira@gmail.com>"]
edition = "2018"

[dependencies]
as-slice = "0.1"
cortex-m = "0.6.3"
cortex-m-rt = { version = "0.6.12" }
cortex-m-rtic = "0.5.5"
cortex-m-semihosting = { version = "0.3.5", optional = true}
embedded-hal = { version = "0.2.3", features = ["unproven"] }
generic-array = "0.13"
nb = "0.1.1"
panic-halt = "0.2"
panic-semihosting = { version = "0.5", optional = true }
stm32l4 = { version = "0.12.1", features = ["rt", "stm32l4x2"] }
stm32l4xx-hal = { version = "0.6.0", features = ["stm32l4x2", "stm32-usbd", "rt"] }
usb-device = "0.2.4"

key_stream = { path = "key_stream" }

[dependencies.panic-rtt-target]
version  = "0.1.1"
features = ["cortex-m"]

[dependencies.rtt-target]
version  = "0.2.2"
features = ["cortex-m"]

[features]
semihosting = ["cortex-m-semihosting", "panic-semihosting"]

[[bin]]
name = "firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
