[package]
name = "firmware"
version = "0.1.0"
authors = ["tomykaira <tomykaira@gmail.com>"]
edition = "2018"

[dependencies]
as-slice = "0.1"
cortex-m = "0.6.3"
cortex-m-rt = { version = "0.6.12" }
cortex-m-rtic = "0.5.5"
cortex-m-semihosting = { version = "0.3.5", optional = true}
embedded-hal = { version = "0.2.3", features = ["unproven"] }
generic-array = "0.13"
nb = "0.1.1"
panic-halt = "0.2"
panic-semihosting = { version = "0.5", optional = true }
stm32l4 = { version = "0.13.0", features = ["rt", "stm32l4x2"] }
# https://github.com/stm32-rs/stm32l4xx-hal/commit/616b77061df80d204d87f8730324d9023301e659#diff-a0188da217f7d7a7717e82f613ce4e305655787f4b8900c577c47d711b4d27ea
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", branch = "master", features = ["stm32l4x2", "stm32-usbd", "rt"] }
usb-device = "0.2.4"

key_stream = { path = "key_stream" }

[dependencies.panic-rtt-target]
version  = "0.1.1"
features = ["cortex-m"]

[dependencies.rtt-target]
version  = "0.2.2"
features = ["cortex-m"]

[features]
semihosting = ["cortex-m-semihosting", "panic-semihosting"]
host = []

[[bin]]
name = "firmware-remote"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "firmware-host"
path = "src/main.rs"
required-features = ["host"]
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
